@@ -16,7 +16,7 @@ AM_SANITY_CHECK
 
 AC_CHECK_LIB(m, erf,,[AC_MSG_ERROR("need libm")])
 
-PKG_CHECK_MODULES(DIFXIO, difxio >= 2.7)
+PKG_CHECK_MODULES(DIFXIO, difxio >= 2.8)
 
 LIBS="${LIBS} ${DIFXIO_LIBS}"
 CFLAGS="${CFLAGS} ${DIFXIO_CFLAGS}"
